Ensure potential image for the pagination (stylesheets) do not overflow from the li and steal the click from item being covered by the clickable image.

--- a/resource/css/icon.css
+++ b/resource/css/icon.css
@@ -162,3 +162,7 @@
 .invert {
 	filter: invert(1);
 }
+
+div[role="navigation"] > ul > li {
+	overflow: hidden;
+}
